test/pkg004/expected.out
Uncaught error: user error (test.ipkg:9:1:
  |
9 | <empty line>
  | ^
filename must contain no directory component
)
